--- a/index.html
+++ b/index.html
@@ -50,20 +50,20 @@
                         </li>
                         </br>
                         <li>
-                            <b>Electrical engineer</b>
-                            <ul>
-                                <li><b>Place:</b>   Zagrebacke otpadne vode, Zagreb (Croatia)</li>
-                                <li><b>Period:</b>  01.07.2015-15.07.2015</li>
-                                <li><b>Details:</b> 2 weeks for school practice(maintenance of the generator)</li>
-                            </ul>
-                        </li>
-                        </br>
-                        <li>
                             <b>RTV repairer</b>
                             <ul>
                                 <li><b>Place:</b>   ZIG d.o.o, Zagreb (Croatia)</li>
                                 <li><b>Period:</b>  02.08.2016-16.08.2016</li>
                                 <li><b>Details:</b> 2 weeks for school practice(repairing TVs, amplifiers, speakers.. Sound limitation in bars,clubs..)</li>
+                            </ul>
+                        </li>
+                        </br>
+                        <li>
+                            <b>Electrical engineer</b>
+                            <ul>
+                                <li><b>Place:</b>   Zagrebacke otpadne vode, Zagreb (Croatia)</li>
+                                <li><b>Period:</b>  01.07.2015-15.07.2015</li>
+                                <li><b>Details:</b> 2 weeks for school practice(maintenance of the generator)</li>
                             </ul>
                         </li>
                     </ul>
@@ -74,7 +74,7 @@
                                 <b>Software engineering</b>
                                 <ul>
                                     <li><b>Place:</b>   Visoko uciliste Algebra, Zagreb (Croatia)</li>
-                                    <li><b>Period:</b>  01/10/2017-Present</li>
+                                    <li><b>Period:</b>  10/2017-10/2020</li>
                                     <li><b>Details:</b> Bachelors in Software Engineering</li>
                                 </ul>
                             </li>
