fix times and details

--- a/index.html
+++ b/index.html
@@ -74,16 +74,16 @@
                                 <b>Software engineering</b>
                                 <ul>
                                     <li><b>Place:</b>   Visoko uciliste Algebra, Zagreb (Croatia)</li>
-                                    <li><b>Period:</b>  10/2017-10/2020</li>
-                                    <li><b>Details:</b> Bachelors in Software Engineering</li>
+                                    <li><b>Period:</b>  2017-2020</li>
+                                    <li><b>Details:</b> Bachelor of Computer Engineering, sub-specialization in Software Engineering</li>
                                 </ul>
                             </li>
                             <li>
-                                <b>Electrical engineer</b>
+                                <b>Electrician</b>
                                 <ul>
                                     <li><b>Place:</b>   Technical School Tesla, Zagreb (Croatia)</li>
                                     <li><b>Period:</b>  09/2013-06/2017</li>
-                                    <li><b>Details:</b> orientation to low Current</li>
+                                    <li><b>Details:</b> High school</li>
                                 </ul>
                             </li>
                         </ul>
