--- a/index.html
+++ b/index.html
@@ -34,17 +34,42 @@
                     <h3>Experience</h3>
                     <ul>
                         <li>
+                            <b>Information Security Specialist</b>
+                            <ul>
+                                <li><b>Place:</b>      INFIGO IS</li>
+                                <li><b>Period:</b>     23.11.2020-present</li>
+                                <li><b>Details:</b>    </br>
+                                    todo</br>
+                                    <i>Keywords: todo</i>
+                                </li>
+                            </ul>
+                        </li>
+                        <li>
                             <b>DevOps engineer</b>
                             <ul>
                                 <li><b>Place:</b>      Croatian Academic and Research Network - CARNET</li>
                                 <li><b>Department:</b> National CERT(Computer Emergency Response Team)</li>
-                                <li><b>Period:</b>     01.03.2020-present</li>
+                                <li><b>Period:</b>     01.06.2020-17.11.2020</li>
                                 <li><b>Details:</b>    </br>
-                                    Firstly, I worked as a Python developer on a nationwide project. We used Django as our backend and PostgreSQL. In the first few months, I introduced a Test Driven development which I later also supervised. After the first project, 
-                                    I was appointed team leader for a new project. In that project, I was designing database diagrams, implementing functions in PostgreSQL, designing and implementing fullstack web application in Flask which was backboned by python 
-                                    crawling scripts which were also written by me. Additionally, I worked on setting up applications on linux based servers using Nginx as our web server and I tried to automate as much as I could using IaC solutions. In addition, at 
-                                    times I did security testing for our applications which I followed up with writing patches for those vulnerabilities.</br>
-                                    <i>Keywords: Python, Django, Flask, Nginx, PostgreSQL</i>
+                                    I worked on setting up applications on linux based servers using Nginx and Apache as our web server and I tried to automate 
+                                    as much as I could using IaC solutions. In addition, at times I did system hardening and security testing for 
+                                    our applications which I followed up with writing patches for those vulnerabilities.</br>
+                                    <i>Keywords: Python, Django, Flask, Nginx, Apache, security testing</i>
+                                </li>
+                            </ul>
+                        </li>
+                        <li>
+                            <b>Python developer</b>
+                            <ul>
+                                <li><b>Place:</b>      Croatian Academic and Research Network - CARNET</li>
+                                <li><b>Department:</b> National CERT(Computer Emergency Response Team)</li>
+                                <li><b>Period:</b>     01.03.2020-01.06.2020</li>
+                                <li><b>Details:</b>    </br>
+                                    I worked on a nationwide project. We used Django and PostgreSQL in our backend. In the first few months, I introduced a Test 
+                                    Driven development which I later also supervised. After the first project, I was appointed team leader for a new project. 
+                                    In that project, I was designing database diagrams, implementing functions in PostgreSQL, designing and implementing fullstack web 
+                                    application in Flask which was backboned by Python crawling scripts which were also written by me.</br>
+                                    <i>Keywords: Python, Django, Flask, PostgreSQL</i>
                                 </li>
                             </ul>
                         </li>
