--- a/index.html
+++ b/index.html
@@ -39,8 +39,8 @@
                                 <li><b>Place:</b>      INFIGO IS</li>
                                 <li><b>Period:</b>     23.11.2020-present</li>
                                 <li><b>Details:</b>    </br>
-                                    todo</br>
-                                    <i>Keywords: todo</i>
+                                    Red teaming</br>
+                                    <i>Keywords: Pentesting</i>
                                 </li>
                             </ul>
                         </li>
