--- a/index.html
+++ b/index.html
@@ -39,8 +39,8 @@
                                 <li><b>Place:</b>      INFIGO IS</li>
                                 <li><b>Period:</b>     23.11.2020-present</li>
                                 <li><b>Details:</b>    </br>
-                                    Red teaming</br>
-                                    <i>Keywords: Pentesting</i>
+                                    Penetration testing, red team assessments</br>
+                                    <i>Keywords: Pentesting, red teaming</i>
                                 </li>
                             </ul>
                         </li>
@@ -119,6 +119,7 @@
                             <b>Python:</b>
                             <ul>
                                 <li><a href="https://github.com/kelj0/dr_buster">Simple, yet effective web path finder implemented with multiprocessing in Python</a></li>
+                                <li><a href="https://github.com/kelj0/dr.faster">Faster implementation of dr buster using C++ 11</a></li>
                                 <li><a href="https://github.com/kelj0/dante">vulnerability, version scanner; exploitation tool and report generator</a></li>
                                 <li><a href="https://github.com/kelj0/university/blob/master/SPO/SPO_Karlo_Kegljevic.ipynb">Data analysis of dresses</a></li>
                                 <li><a href="https://github.com/kelj0/exploit-db-wrapper">A minimal exploit-db wrapper written in Python</a></li>
@@ -249,6 +250,7 @@
                     <h3>Other (markup,style sheet languages..)</h3>
                     <ul>
                         <li>Markdown</li>
+                        <li>LaTeX</li>
                         <li>HTML</li>
                         <li>CSS, SCSS</li>
                         <li>Texteditor: (neo)vim</li>
