--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@
                     <h3>Projects</h3>
                     <ul>
                         <li>
-                            <b>Python:</b>
+                            <b>Python/C++:</b>
                             <ul>
                                 <li><a href="https://github.com/kelj0/dr_buster">Simple, yet effective web path finder implemented with multiprocessing in Python</a></li>
                                 <li><a href="https://github.com/kelj0/dr.faster">Faster implementation of dr buster using C++ 11</a></li>
@@ -126,6 +126,7 @@
                                 <li><a href="https://github.com/kelj0/IRCat">IRC bot that has some useful commands</a></li>
                                 <li><a href="https://github.com/kelj0/SimpleChat">Simple chat</a></li>
                                 <li><a href="https://github.com/kelj0/Simple-FoodShop">Simple Food Shop</a></li>
+                                <li><a href="https://github.com/kelj0/simple-auth">Authentication server [TODO]</a></li>
                             </ul>
                         </li>
                         <li>
@@ -141,7 +142,6 @@
                             <ul>
                                 <li><a href="https://github.com/kelj0/university">College projects [Java, C#, T-SQL]</a></li>
                                 <li><a href="https://github.com/kelj0/simple-configuration-manager">Very simple implementation of CCA (like puppet) [.NET Core/Vue/BASH/Powershell/Java]</a></li>
-                                <li><a href="https://github.com/kelj0/simple-auth">Authentication server [C++][TODO]</a></li>
                                 <li><a href="https://github.com/kelj0/dotfiles/blob/master/deploy.sh">Script that setups configs on Linux [BASH]</a></li>
                                 <li><a href="https://github.com/kelj0/kelj0-css">CSS framework</a></li>
                                 <li><a href="https://github.com/kelj0/kelj0.github.io">Portfollo(this page)</a></li>
