--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
                     <h3>About</h3>
                     <p>
                         I am a software engineer that finds his way around networking, programming and security.</br>
-                        I find great joy in creating anything from zero. If I get my hands on any software or hardware I enjoy in dissecting every bit of it for the purpuse of breaking it and then fixing it.</br>
+                        I find great joy in creating anything from zero. If I get my hands on any software or hardware I enjoy in dissecting every bit of it for the purpose of breaking it and then fixing it.</br>
                         In college I learned Java and C#, but my language of choice is still Python that I learned by myself. </br>
                         I got low level languages experience while I was working on a project where we were implementing our OS in C++.</br>
                         For programming and server managing most of the time I use tmux and (neo)vim.</br>
