--- a/index.html
+++ b/index.html
@@ -37,7 +37,6 @@
                             <b>Information Security Specialist</b>
                             <ul>
                                 <li><b>Place:</b>      INFIGO IS</li>
-                                <li><b>Period:</b>     23.11.2020-present</li>
                                 <li><b>Details:</b>    </br>
                                     Penetration testing, red team assessments</br>
                                     <i>Keywords: Pentesting, red teaming</i>
@@ -70,6 +69,18 @@
                                     In that project, I was designing database diagrams, implementing functions in PostgreSQL, designing and implementing fullstack web 
                                     application in Flask which was backboned by Python crawling scripts which were also written by me.</br>
                                     <i>Keywords: Python, Django, Flask, PostgreSQL</i>
+                                </li>
+                            </ul>
+                        </li>
+                        <li>
+                            <b>Freelance fullstack developer</b>
+                            <ul>
+                                <li><b>Place:</b>-</li>
+                                <li><b>Department:</b>-</li>
+                                <li><b>Period:</b>01.01.2016-01.03.2020</li>
+                                <li><b>Details:</b>    </br>
+                                    Fullstack developer</br>
+                                    <i>Keywords: Python, Django, Flask, PostgreSQL, Linux</i>
                                 </li>
                             </ul>
                         </li>
