--- a/index.html
+++ b/index.html
@@ -37,6 +37,8 @@
                             <b>Senior software engineer</b>
                             <ul>
                                 <li><b>Place:</b>      Self-emplyed</li>
+                                <li><b>Department:</b> -</li>
+                                <li><b>Period:</b>     29.4.2021-present</li>
                                 <li><b>Details:</b>    </br>
                                     Developing scalable, reliable, secure and complete software solutions.</br>
                                     <i>Keywords: Python (Flask/Django), C++11, PostgreSQL/MySQL/SQLite/MongoDB, Redis/RabbitMQ, Linux/*BSD, BASH</i>
@@ -47,6 +49,8 @@
                             <b>Information Security Specialist</b>
                             <ul>
                                 <li><b>Place:</b>      INFIGO IS</li>
+                                <li><b>Department:</b> Red team</li>
+                                <li><b>Period:</b>     17.11.2020-29.4.2021</li>
                                 <li><b>Details:</b>    </br>
                                     Penetration testing, red team assessments</br>
                                     <i>Keywords: Pentesting, red teaming</i>
