--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
                         <li>
                             <b>Senior software engineer</b>
                             <ul>
-                                <li><b>Place:</b>      Self-emplyed</li>
+                                <li><b>Place:</b>      Self-employed</li>
                                 <li><b>Department:</b> -</li>
                                 <li><b>Period:</b>     29.4.2021-present</li>
                                 <li><b>Details:</b>    </br>
