--- a/matrix_index.html
+++ b/matrix_index.html
@@ -9,6 +9,7 @@
     <body>
         <!-- да -->
         <div id="wrapper">
+            <canvas id="q"></canvas>
             <div id="middleBox">
                 <h1>Karlo Kegljevic</h1>
                 <div id="scrollable">
@@ -40,7 +41,7 @@
                                 <li><b>Period:</b>     29.4.2021-present</li>
                                 <li><b>Details:</b>    </br>
                                     Developing scalable, reliable, secure and complete software solutions.</br>
-                                    <i>Keywords: Python (Flask/Django), C++11, PostgreSQL/MySQL/SQLite/MongoDB, Redis/RabbitMQ, Linux/*BSD, Celery/RQ</i>
+                                    <i>Keywords: Python (Flask/Django), C++11, PostgreSQL/MySQL/SQLite/MongoDB, Redis/RabbitMQ, Linux/*BSD, BASH</i>
                                 </li>
                             </ul>
                         </li>
@@ -181,47 +182,107 @@
                         <li><a href="https://kelj0.com/papers/CLANAK_Karlo_Kegljevic_R2.pdf">Analiza kriptovaluta (2017)</a></li>
                     </ul>
 
-                    <h3>Skills</h3>
+                    <h3>Programming languages I used</h3>
+                    <ul>
+                        <li>Python</li>
+                        <li>BASH</li>
+                        <li>Javascript</li>
+                        <li>SQL</li>
+                        <li>X86 Assembly</li>
+                        <li>C/C++</li>
+                        <li>Java</li>
+                        <li>C#</li>
+                    </ul>
+
+                    <h3>Technologies I used</h3>
                     <ul>
                         <li>
-                            DevOps
+                            Operating systems
                             <ul>
-                                <li>Well versed in many programming languages (scripting, object oriented)</li>
-                                <li>High availability architecture design</li>
-                                <li>Versed in many kinds of virtualizations</li>
-                                <li>Configuration management (IaC)</li>
-                                <li>Database design and configuration</li>
+                                <li>[Main OS]Debian 10</li>
+                                <li>Ubuntu</li>
+                                <li>Fedora</li>
+                                <li>Tails</li>
+                                <li>FreeBSD</li>
+                                <li>Parrot OS</li>
+                                <li>Kali Linux</li>
+                                <li>Whonix</li>
+                                <li>TempleOS</li>
+                                <li>Windows XP/7/8/10</li>
                             </ul>
                         </li>
                         <li>
-                            SecOps
+                            Virtualization
                             <ul>
-                                <li>Web application security</li>
-                                <li>Android security</li>
-                                <li>Network security</li>
-                                <li>Application security</li>
+                                <li>Oracle VirtualBox</li>
+                                <li>VMware</li>
+                                <li>QEMU</li>
                             </ul>
                         </li>
                         <li>
-                            NetOps
+                            Web dev
                             <ul>
-                                <li>LDAP/AD</li>
-                                <li>Firewall configuration</li>
-                                <li>Linux and Unix server hardenind</li>
-                                <li>Subnetting</li>
+                                <li>Flask</li>
+                                <li>Django</li>
+                                <li>Vue</li>
+                                <li>JQuery</li>
+                                <li>ASP.NET</li>
+                                <li>JSP</li>
                             </ul>
                         </li>
                         <li>
-                            Other
+                            Databases
                             <ul>
-                                <li>Knowledge of many markup languages</li>
-                                <li>Experience in front end development</li>
-                                <li>Experience in team leading</li>
+                                <li>MySQL</li>
+                                <li>PosgreSQL</li>
+                                <li>T-SQL</li>
+                                <li>SQLite</li>
+                                <li>Redis</li>
+                                <li>SQLAlchemy</li>
+                                <li>JDBC (for sqlite3 and MySQL)</li>
                             </ul>
                         </li>
+                        <li>
+                            Networking
+                            <ul>
+                                <li>SSH, telnet, FTP</li>
+                                <li>Wireshark, tcpdump</li>
+                                <li>PuTTY</li>
+                                <li>Nginx, Tomcat</li>
+                                <li>/etc/network/interfaces</li>
+                            </ul>
+                        </li>
+                        <li>
+                            Linux hardening
+                            <ul>
+                                <li>SELinux</li>
+                                <li>LUKS disk encryption</li>
+                                <li>/etc/ssh/*</li>
+                            </ul>
+                        </li>
+                        <li>
+                            GUI
+                            <ul>
+                                <li>Swing</li>
+                                <li>SFML</li>
+                                <li>Windows Forms</li>
+                                <li>Pygame</li>
+                                <li>WPF</li>
+                            </ul>
+                        </li>
+                    </ul>
+
+                    <h3>Other (markup,style sheet languages..)</h3>
+                    <ul>
+                        <li>Markdown</li>
+                        <li>LaTeX</li>
+                        <li>HTML</li>
+                        <li>CSS, SCSS</li>
+                        <li>Texteditor: (neo)vim</li>
                     </ul>
                 </div>
             </div>
         </div>
     </body>
+    <script src="script.js"></script>
 </html>
