--- a/index.html
+++ b/index.html
@@ -187,10 +187,11 @@
                             DevOps
                             <ul>
                                 <li>Well versed in many programming languages (scripting, object oriented)</li>
+                                <li>Implemented custom CI/CD pipelines</li>
                                 <li>High availability architecture design</li>
-                                <li>Versed in many kinds of virtualizations</li>
-                                <li>Configuration management (IaC)</li>
-                                <li>Database design and configuration</li>
+                                <li>Versed in both cloud (AWS, GCP) and bare metal virtualizations (VMware, Hyper-V, QEMU, KVM)</li>
+                                <li>Configuration management (Ansible, Puppet)</li>
+                                <li>Database design and configuration (PostgreSQL, MySQL, NoSQL, MariaDb)</li>
                             </ul>
                         </li>
                         <li>
