--- a/index.html
+++ b/index.html
@@ -208,7 +208,7 @@
                             <ul>
                                 <li>LDAP/AD</li>
                                 <li>Firewall configuration</li>
-                                <li>Linux and Unix server hardenind</li>
+                                <li>Linux and Unix server hardening</li>
                                 <li>Subnetting</li>
                             </ul>
                         </li>
