--- a/index.html
+++ b/index.html
@@ -143,7 +143,7 @@
                             Development
                             <ul>
                                 <li>
-                                    As a Site Reliability Engineer, I have demonstrated mastery of various technical skills relevant to software development. 
+                                    As a Software Engineer, I have demonstrated mastery of various technical skills relevant to software development. 
                                     I am proficient in Python and JavaScript, have extensive knowledge of version control systems like git/svn, and am well-versed
                                     in software architecture and design patterns. These skills have enabled me to develop scalable, reliable, secure, and complete 
                                     software solutions using a range of technologies, including Flask/Django frameworks, C++11, and databases such as PostgreSQL, 
@@ -182,19 +182,16 @@
                                 <li><a href="https://github.com/kelj0/dr_buster">Simple, yet effective web path finder implemented with multiprocessing in Python</a></li>
                                 <li><a href="https://github.com/kelj0/dr.faster">Faster implementation of dr buster using C++ 11</a></li>
                                 <li><a href="https://github.com/kelj0/dante">vulnerability, version scanner; exploitation tool and report generator</a></li>
-                                <li><a href="https://github.com/kelj0/university/blob/master/SPO/SPO_Karlo_Kegljevic.ipynb">Data analysis of dresses</a></li>
                                 <li><a href="https://github.com/kelj0/exploit-db-wrapper">A minimal exploit-db wrapper written in Python</a></li>
                                 <li><a href="https://github.com/kelj0/IRCat">IRC bot that has some useful commands</a></li>
-                                <li><a href="https://github.com/kelj0/SimpleChat">Simple chat</a></li>
-                                <li><a href="https://github.com/kelj0/Simple-FoodShop">Simple Food Shop</a></li>
                                 <li><a href="https://github.com/kelj0/simple-auth">Authentication server [TODO]</a></li>
                             </ul>
                         </li>
                         <li>
                             <b>References:</b>
                             <ul>
-                                <li><a href="https://github.com/kelj0/LearningPython#python-references">for Python</a></li>
-                                <li><a href="https://github.com/kelj0/Man-Linux">for Linux</a></li>
+                                <li><a href="https://github.com/kelj0/Teaching-Python3">for Python</a></li>
+                                <li><a href="https://github.com/kelj0/Teaching-Linux">for Linux</a></li>
                                 <li><a href="https://github.com/kelj0/Man-C">for C</a></li>
                                 <li><a href="https://github.com/kelj0/Web-Dev">for Frontend</a></li>
                             </ul>
