--- a/portfolio/public/index.html
+++ b/portfolio/public/index.html
@@ -54,9 +54,9 @@
 
 
 
-<link rel="icon" type="image/svg+xml" href="/img/freebsd.jpeg" sizes="any">
-<link rel="icon" type="image/png" href="/img/freebsd.jpeg" sizes="32x32">
-<link rel="icon" type="image/png" href="/img/freebsd.jpeg" sizes="16x16">
+<link rel="icon" type="image/svg+xml" href="/images/freebsd.jpeg" sizes="any">
+<link rel="icon" type="image/png" href="/images/freebsd.jpeg" sizes="32x32">
+<link rel="icon" type="image/png" href="/images/freebsd.jpeg" sizes="16x16">
 
 <link rel="apple-touch-icon" href="/images/apple-touch-icon.png">
 <link rel="apple-touch-icon" sizes="180x180" href="/images/apple-touch-icon.png">
@@ -130,7 +130,7 @@
   <div class="about">
     
   
-    <div class="avatar"><img src="/images/avatar.jpg" alt="avatar"></div>
+    <div class="avatar"><img src="/images/avatar.png" alt="avatar"></div>
   
 
 
